added request listener witch decide if user has permissions.

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -53,3 +53,9 @@ services:
         parent: auth.doctrine_manager
         calls:
             - [init]
+
+    auth.rapi.request_listener:
+        class: AuthBundle\Listener\RequestListener
+        arguments: ["@bs.rapi.request", "@router", "@auth.login", "@auth.access_service"]
+        tags:
+            - { name: kernel.event_listener, event: kernel.request }
