--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,15 @@
         "MIT"
     ],
     "require": {
-        "php": ">=5.4"
+        "php": ">=5.5",
+        "bs/rapi": "1.0.*"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/darijuxs/RAPIBundle.git"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "AuthBundle\\": ""
